dataset/local/df_detect_multiple_instructions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: detect-multiple-instructions
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: detect-multiple-instructions
    kind: Dockerfile
    resources:
      - good-dockerfile
    result: pass
  - policy: detect-multiple-instructions
    kind: Dockerfile
    resources:
      - bad-dockerfile
    result: fail
